kattintas mukodik, css alap, de elfogadhato

--- a/index.html
+++ b/index.html
@@ -24,13 +24,15 @@
             </fieldset>
         </form>
     </section>
-    <section id="jatekTer">
-        <!--9 div kell ide-->
-    </section>
-    <aside>
-        <h1>A játék állapota:</h1>
+   <main>
+        <section id="jatekTer">
+            <!--9 div kell ide-->
+        </section>
+        <aside id="allapot">
+            <h2>A játék állapota:</h2>
 
-    </aside>
+        </aside>
+   </main>
     <footer id="footer">Készítette: Nádas Viktória</footer>
 </body>
 </html>
